[package]
name = "proxifier-rs"
description = "Proxy client library supporting SOCKS4/SOCKS5 and HTTP/HTTPS proxies with TLS support"
version = "0.1.2"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Z3NTL3/proxifier-rs"
readme = "README.md"

[features]
default = ["tls"]
tls = []

[dependencies]
bytes = "1.11.1"
http = "1.4.0"
rustls = "0.23.40"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = { version = "0.1.44" }
rustls-pki-types = { version = "1.14.1", features = ["std"]}
webpki-roots = "1.0.7"
base64 = "0.22.1"
byteorder = "1.5.0"


[dev-dependencies]
webpki-roots = "1.0.7"
base64 = "0.22.1"
