[package]
name = "proxifier-rs"
description = "Simple proxy client library to relay network packets towards a destination target using a proxy. With built-in support for TLS."
version = "0.1.104"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Z3NTL3/proxifier-rs"
readme = "README.md"

[features]
default = ["tls"]
tls = []

[dependencies]
http = "1.4.0"
rustls = "0.23.40"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = { version = "0.1.44" }
rustls-pki-types = { version = "1.14.1", features = ["std"]}


[dev-dependencies]
webpki-roots = "1.0.7"
base64 = "0.22.1"
